Update seeds and footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,12 @@
 <footer id="page-footer">
   <p>
     Copyright &copy; <%= Date.today.year.to_s %>
-    <%= link_to 'The Pragmatic Studio', 'http://pragmaticstudio.com' %>
+    <%= link_to "The Pragmatic Studio's Ruby on Rails: Level I", 'http://pragmaticstudio.com/alumni/waihon' %>
   </p>
   <p>
     For educational purposes only.
+  </p>
+  <p>
+    <%= link_to "Waihon Yew Shares his SaaS Development Journey", "https://www.facebook.com/waihonpage" %>
   </p>
 </footer>
