--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -27,10 +27,10 @@
         <%= f.label :duration %>
         <%= f.text_field :duration, size: 10 %>
       </li>
-      <li>
+      <!-- <li>
         <%= f.label :image_file_name %>
         <%= f.text_field :image_file_name %>
-      </li>
+      </li> -->
       <li>
         <%= f.label :cast %>
         <%= f.text_field :cast %>
@@ -38,6 +38,13 @@
       <li>
         <%= f.label :director %>
         <%= f.text_field :director %>
+      </li>
+      <li>
+        <%= f.label :image %>
+        <%= f.file_field :image %>
+      </li>
+      <li>
+        <%= image_for(@movie) %>
       </li>
     </ol>
     <p>
