Add jQuery and Ajax to Show page to allow adding of reviews

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -33,7 +33,7 @@
       </li> -->
       <li>
         <%= f.label :cast %>
-        <%= f.text_field :cast %>
+        <%= f.text_field :cast, size: 40 %>
       </li>
       <li>
         <%= f.label :director %>
