--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,4 +2,4 @@
   <h1>Editing Review for <%= link_to @movie.title, @movie %></h1>
 </header>
 
-<%= render "form" %>
+<%= render "form", remote: false %>
