Add UI for User Accounts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,8 @@
     <h1><%= link_to 'Flix', root_path %></h1>
     <nav>
       <p>
-        <%= link_to "Contact Us", "http://twittter.com/waihon" %>
+        <%= link_to "Sign Up", signup_path, class: "button" %>
+        <%= link_to "Contact Us", "http://twittter.com/waihon", class: "button" %>
       </p>
     </nav>
   </div>
