Add Sign In Form

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <nav>
       <p>
         <%= link_to "Sign Up", signup_path, class: "button" %>
+        <%= link_to "Sign In", signin_path, class: "button" %>
         <%= link_to "Contact Us", "http://twittter.com/waihon", class: "button" %>
       </p>
     </nav>
