--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,8 @@
       <p>
         <% if current_user %>
           <%= link_to current_user.name, current_user %> |
-          <%= link_to "Account Settings", edit_user_path(current_user) %>
+          <%= link_to "Account Settings", edit_user_path(current_user) %> |
+          <%= link_to "Sign Out", session_path, method: :delete, class: "button" %>
         <% else %>
           <%= link_to "Sign Up", signup_path, class: "button" %>
           <%= link_to "Sign In", signin_path, class: "button" %>
