--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,13 @@
 
   <footer>
     <nav>
-      <%= link_to "Edit Account", edit_user_path(@user), class: "button" %>
-      <%= link_to "Delete Account", @user,
-                                    method: :delete,
-                                    data: { confirm: "Are you sure you want to permanenetly delete your account?" },
-                                    class: "button" %>
+      <% if current_user?(@user) %>
+        <%= link_to "Edit Account", edit_user_path(@user), class: "button" %>
+        <%= link_to "Delete Account", @user,
+                                      method: :delete,
+                                      data: { confirm: "Are you sure you want to permanenetly delete your account?" },
+                                      class: "button" %>
+      <% end %>                                      
     </nav>
   </footer>
 </article>
