--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,6 @@
 <li>
   <span class="review"><%= pluralize(review.stars, "star") %></span> 
-  <span class="user">by <%= review.name %></span> 
+  <span class="user">by <%= review.user.name %></span> 
   <span class="date"><%= time_ago_in_words(review.created_at) %> ago.</span>
   <p>
     &quot;<%= review.comment %>&quot;
