--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,22 @@
     </p>
   </header>
 
+  <% if @reviews.any? %>
+    <h3>Reviews</h3>
+    <ol id="reviews">
+      <% @reviews.each do |review| %>
+        <li>
+          <%= link_to review.movie.title, review.movie %> &bull;
+          <span class="review"><%= pluralize(review.stars, "star") %> &bull;</span> 
+          <span class="date"><%= time_ago_in_words(review.created_at) %> ago</span>
+          <p>
+            &quot;<%= review.comment %>&quot;
+          </p>        
+        </li>
+      <% end %>
+    </ol>  
+  <% end %>
+
   <footer>
     <nav>
       <% if current_user?(@user) %>
