--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,6 +12,27 @@
   <h3 class="no-rule">
     <%= @movie.rating %> &bull; <%= @movie.duration %> 
   </h3>
+
+  <h3><%= pluralize(@fans.size, "fan") %></h3>
+  <ol id="users">
+    <% if @fans.any? %>
+      <% @fans.each do |fan| %>
+        <li>
+          <span><%= profile_image_for(fan, size: 35) %></span>
+          <span class="user"><%= link_to fan.name, fan %></span>
+        </li>
+      <% end %>
+    <% end %>
+  </ol>
+
+  <% if current_user %>
+    <% if @current_favorite %>
+      <%= button_to "Unfave", movie_favorite_path(@movie, @current_favorite), 
+                              method: :delete, class: "button unfave" %>
+    <% else %>
+      <%= button_to "Fave", movie_favorites_path(@movie), class: "button fave" %>
+    <% end %>
+  <% end %>
   
   <h3>Cast</h3>
   <p>
