Add Many-to-Many with Checkboxes

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -40,6 +40,9 @@
         <%= f.text_field :director %>
       </li>
       <li>
+        <%= f.collection_check_boxes :genre_ids, Genre.all, :id, :name %>
+      </li>      
+      <li>
         <%= f.label :image %>
         <%= f.file_field :image %>
       </li>
