--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -53,7 +53,7 @@
     <h3>Genres</h3>
     <ul>
       <% @genres.each do |genre| %>
-        <li><%= genre.name %></li>
+        <li><%= link_to genre.name, genre %></li>
       <% end %>
     </ul>
   <% end %>
