--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,5 @@
+<% title("#{@movie.title} (#{@movie.released_on.year})") %>
+
 <article id="movie" class="movie">
   <header>
     <%= image_for(@movie) %>
@@ -12,18 +14,6 @@
   <h3 class="no-rule">
     <%= @movie.rating %> &bull; <%= @movie.duration %> 
   </h3>
-
-  <h3><%= pluralize(@fans.size, "fan") %></h3>
-  <ol id="users">
-    <% if @fans.any? %>
-      <% @fans.each do |fan| %>
-        <li>
-          <span><%= profile_image_for(fan, size: 35) %></span>
-          <span class="user"><%= link_to fan.name, fan %></span>
-        </li>
-      <% end %>
-    <% end %>
-  </ol>
 
   <% if current_user %>
     <% if @current_favorite %>
@@ -48,15 +38,6 @@
   <p>
     <%= format_total_gross(@movie) %>
   </p>
-
-  <% if @genres.any? %>
-    <h3>Genres</h3>
-    <ul>
-      <% @genres.each do |genre| %>
-        <li><%= link_to genre.name, genre %></li>
-      <% end %>
-    </ul>
-  <% end %>
 
   <h3>Average Review</h3>
   <p>
@@ -95,3 +76,7 @@
     </nav>
   </footer>
 </article>
+
+<% content_for :side do %>
+  <%= render "movie_sidebar_extras" %>
+<% end %>
