--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% title(@user.name) %>
+
 <article id="user">
   <header>
     <%= profile_image_for(@user) %>
@@ -25,17 +27,6 @@
     </ol>  
   <% end %>
 
-  <% if @favorite_movies.any? %>
-    <h3>Favorite Movies</h3>
-    <ul>
-      <% @favorite_movies.each do |movie| %>
-        <li>
-          <%= link_to movie.title, movie %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-
   <footer>
     <nav>
       <% if current_user?(@user) %>
@@ -50,3 +41,16 @@
     </nav>
   </footer>
 </article>
+
+<% content_for :side do %>
+  <% if @favorite_movies.any? %>
+    <h3>Favorite Movies</h3>
+    <ul id="movies">
+      <% @favorite_movies.each do |movie| %>
+        <li>
+          <%= link_to movie.title, movie %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+<% end %>
