--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -128,7 +128,7 @@ aside#sidebar {
         padding: 4px 0;
         padding-left: 25px;
 
-        &.all-movies a {
+        &.movies a {
           display: block;
           background: image-url("arrow.png") no-repeat 10px 8px;
           padding-left: 35px;
