--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,8 +1,20 @@
 <aside id="sidebar">
   <nav>
     <ul>
-      <li class="all-movies">
-        <%= link_to 'All Movies', movies_path, class: 'button' %>
+      <li class="movies">
+        <%= link_to 'Released', movies_path, class: 'button' %>
+      </li>
+      <li class="movies">
+        <%= link_to 'Hits', filtered_movies_path(:hits), class: 'button' %>
+      </li>
+      <li class="movies">
+        <%= link_to 'Flops', filtered_movies_path(:flops), class: 'button' %>
+      </li>
+      <li class="movies">
+        <%= link_to 'Upcoming', filtered_movies_path(:upcoming), class: 'button' %>
+      </li>
+      <li class="movies">
+        <%= link_to 'Recent', filtered_movies_path(:recent), class: 'button' %>
       </li>
       <% if current_user_admin? %>
         <li class="create-movie">
