Add Custom Routes Bonus Features

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -158,6 +158,10 @@ aside#sidebar {
           color: #000;
         }
 
+        a.active {
+          background-color: $subdued-color;
+          color: #000;
+        }
       }
     }
   }
