--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,31 +2,31 @@
   <nav>
     <ul>
       <li class="movies">
-        <%= link_to 'Released', movies_path, class: 'button' %>
+        <%= nav_link_to 'Released', movies_path %>
       </li>
       <li class="movies">
-        <%= link_to 'Hits', filtered_movies_path(:hits), class: 'button' %>
+        <%= nav_link_to 'Hits', filtered_movies_path(:hits) %>
       </li>
       <li class="movies">
-        <%= link_to 'Flops', filtered_movies_path(:flops), class: 'button' %>
+        <%= nav_link_to 'Flops', filtered_movies_path(:flops) %>
       </li>
       <li class="movies">
-        <%= link_to 'Upcoming', filtered_movies_path(:upcoming), class: 'button' %>
+        <%= nav_link_to 'Upcoming', filtered_movies_path(:upcoming) %>
       </li>
       <li class="movies">
-        <%= link_to 'Recent', filtered_movies_path(:recent), class: 'button' %>
+        <%= nav_link_to 'Recent', filtered_movies_path(:recent) %>
       </li>
       <% if current_user_admin? %>
         <li class="create-movie">
-          <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
+          <%= nav_link_to 'Add New Movie', new_movie_path %>
         </li>
       <% end %>
       <li class="all-genres">
-        <%= link_to "All Genres", genres_path, class: "button" %>
+        <%= nav_link_to "All Genres", genres_path %>
       </li>
       <% if current_user_admin? %>
         <li class="create-genre">
-          <%= link_to "Add New Genre", new_genre_path, class: "button" %>
+          <%= nav_link_to "Add New Genre", new_genre_path %>
         </li>
       <% end %>
     </ul>
