--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -6,6 +6,12 @@
         <%= f.label :name %>
         <%= f.text_field :name, autofocus: true %>
       </li>
+      <% unless @genre.new_record? %>
+        <li class="required">
+          <%= f.label :slug %>
+          <%= f.text_field :slug, size: 30 %>
+        </li>
+      <% end %>
     </ol>
     <p>
       <%= f.submit %>
